--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy new year</title>
+    <title>Happy new year 2024</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -84,7 +84,7 @@
     </div>
 
     <div class="mahi_wish">
-        <p>Happy new year</p>
+        <p>Happy new year 2024</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="main.js">
